instructions.InstructionsDrawG.scala.error
Erreur de compilation :
InstructionsDrawG:4: error: not found: value avancer
avancer()
^InstructionsDrawG:5: error: not found: value avancer
avancer()
^InstructionsDrawG:6: error: not found: value avancer
avancer()
^InstructionsDrawG:7: error: not found: value avancer
avancer()
^InstructionsDrawG:10: error: not found: value avancer
avancer()
^InstructionsDrawG:11: error: not found: value avancer
avancer()
^InstructionsDrawG:12: error: not found: value avancer
avancer()
^InstructionsDrawG:13: error: not found: value avancer
avancer()
^InstructionsDrawG:16: error: not found: value avancer
avancer()
^InstructionsDrawG:17: error: not found: value avancer
avancer()
^InstructionsDrawG:18: error: not found: value avancer
avancer()
^InstructionsDrawG:19: error: not found: value avancer
avancer()
^InstructionsDrawG:22: error: not found: value avancer
avancer()
^InstructionsDrawG:23: error: not found: value avancer
avancer()
^InstructionsDrawG:26: error: not found: value avancer
avancer()
^