instructions.InstructionsDrawG.scala.code
/* Faire le haut du G */
baisseBrosse()
gauche()
avancer()
avancer()
avancer()
avancer()

gauche()
avancer()
avancer()
avancer()
avancer()

gauche()
avancer()
avancer()
avancer()
avancer()

gauche()
avancer()
avancer()

gauche()
avancer()

gauche()